--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,14 @@
     <servlet-name>LoginServlet</servlet-name>
     <url-pattern>/LoginServlet</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <servlet-name>CandServlet</servlet-name>
+    <servlet-class>it.contrader.servlets.CandServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CandServlet</servlet-name>
+    <url-pattern>/CandServlet</url-pattern>
+  </servlet-mapping>
   <servlet-mapping>
     <servlet-name>LogoutServlet</servlet-name>
     <url-pattern>/LogoutServlet</url-pattern>
