--- a/gateway/package.json
+++ b/gateway/package.json
@@ -23,17 +23,16 @@
     "@ngx-translate/http-loader": "4.0.0",
     "bootstrap": "4.3.1",
     "core-js": "3.1.3",
-    "force": "0.0.3",
     "moment": "2.24.0",
     "ng-jhipster": "0.10.1",
     "ngx-cookie": "4.0.2",
     "ngx-infinite-scroll": "7.2.0",
     "ngx-webstorage": "4.0.1",
     "rxjs": "6.5.2",
+    "swagger-ui": "2.2.10",
     "sockjs-client": "1.3.0",
-    "swagger-ui": "^3.23.8",
-    "tslib": "1.10.0",
     "webstomp-client": "1.2.6",
+    "tslib": "1.10.0",
     "zone.js": "0.9.1"
   },
   "devDependencies": {
